[Store] IE11 Hero Alignment Fix (#319)
* Fix alignment issue

* Revert padding change

* Wasn’t causing the issue on IE, used for mobile and is overridden on
sizes greater than small.

--- a/client/src/components/StoreHero/styles.module.css
+++ b/client/src/components/StoreHero/styles.module.css
@@ -53,4 +53,6 @@
 
 .innerContainer {
     @mixin container;
+
+    max-width: 100%;
 }
